Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- The 'Add flexible widget' menu do no longer float on the left
- #1437: pressing Enter when modifying the title of a document containing 
  file/url/text widget no longer delete the widget
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-