@@ -201,8 +201,10 @@ class CPSDocumentXMLAdapter(XMLAdapterBase, CPSObjectManagerHelpers):
             if child.nodeName != 'f':
                 continue
             key = str(child.getAttribute('id'))
-            # FIXME if document schema changed, field is not available, see
-            # trac ticket #1456
+            if not key in datamodel._fields:
+                # Document schema changed, field is not available
+                # Raising an exception is better than silently ignoring data
+                raise KeyError("Unknown field %r in %s" % (key, self.filename))
             field = datamodel._fields[key]
             nodeio = IFieldNodeIO(field)
             value = nodeio.getNodeValue(child, self)
